--- a/Glossary/pom.xml
+++ b/Glossary/pom.xml
@@ -69,6 +69,23 @@
 			<version>4.6.0</version>
 		</dependency>
 
+		<!-- зависимости для postgresQL -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+			<version>5.0.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.3.6</version>
+		</dependency>
+		<!-- конец зависимостей для postgresQL -->
+
 
 	</dependencies>
 
