--- a/Glossary/pom.xml
+++ b/Glossary/pom.xml
@@ -80,17 +80,18 @@
 <!--			<artifactId>HikariCP</artifactId>-->
 <!--			<version>5.0.1</version>-->
 <!--		</dependency>-->
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.4.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-			<version>2.7.1</version>
-		</dependency>
-		<!-- конец зависимостей для postgresQL -->
+<!--		&lt;!&ndash; начало новых зависимостей для postgresQL &ndash;&gt;-->
+<!--		<dependency>-->
+<!--			<groupId>org.postgresql</groupId>-->
+<!--			<artifactId>postgresql</artifactId>-->
+<!--			<version>42.4.0</version>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
+<!--			<version>2.7.1</version>-->
+<!--		</dependency>-->
+<!--		&lt;!&ndash; конец зависимостей для postgresQL &ndash;&gt;-->
 
 
 	</dependencies>
