--- a/Glossary/pom.xml
+++ b/Glossary/pom.xml
@@ -69,30 +69,16 @@
 			<artifactId>mongodb-driver-sync</artifactId>
 			<version>4.6.0</version>
 		</dependency>
-
-<!--		&lt;!&ndash; зависимости для postgresQL &ndash;&gt;-->
-<!--		<dependency>-->
-<!--			<groupId>org.springframework.boot</groupId>-->
-<!--			<artifactId>spring-boot-starter-jdbc</artifactId>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>com.zaxxer</groupId>-->
-<!--			<artifactId>HikariCP</artifactId>-->
-<!--			<version>5.0.1</version>-->
-<!--		</dependency>-->
-<!--		&lt;!&ndash; начало новых зависимостей для postgresQL &ndash;&gt;-->
-<!--		<dependency>-->
-<!--			<groupId>org.postgresql</groupId>-->
-<!--			<artifactId>postgresql</artifactId>-->
-<!--			<version>42.4.0</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.4.0</version>
+		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>org.springframework.boot</groupId>-->
 <!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
 <!--			<version>2.7.1</version>-->
 <!--		</dependency>-->
-<!--		&lt;!&ndash; конец зависимостей для postgresQL &ndash;&gt;-->
-
 
 	</dependencies>
 
