--- a/Glossary/src/main/resources/database.properties
+++ b/Glossary/src/main/resources/database.properties
@@ -1,3 +1,3 @@
-url = jdbc:postgresql://localhost:5432/DBsample?serverTimezone=Europe/Moscow&useSSL=false
+url = jdbc:postgresql://localhost:5432/Glossary?serverTimezone=Europe/Moscow&useSSL=false
 username = postgres
 password = 4512
