--- a/Glossary/pom.xml
+++ b/Glossary/pom.xml
@@ -79,6 +79,13 @@
 <!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
 <!--			<version>2.7.1</version>-->
 <!--		</dependency>-->
+		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-javadoc-plugin -->
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-javadoc-plugin</artifactId>
+			<version>3.4.0</version>
+		</dependency>
+
 
 	</dependencies>
 
